--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,41 @@
-#wrapper
+body
 {
-	margin-top: 4%;
-    margin-left: 30%;
-    margin-right: 30%;
-    text-align: center;
+	margin-top: 2%;
+	margin-left: 20%;
+	margin-right: 20%;
 }
 
-#header
+#wrapper
 {
-	font-size: 48px;
-	font-family: helvetica;
+	position: relative;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: white;
+	overflow: hidden;
+}
+
+#header_main
+{
+	text-align: center;
+	font-size: 5em;
+	font-family: Helvetica;
+}
+
+#header_welcome_message
+{
+	text-align: left;
+	font-size: 1em;
+	color: gray;
+	font-family: Helvetica;
+}
+
+#subheading
+{
+	text-align: center;
+	font-size: 1em;
+	color: gray;
+	font-family: Helvetica;
 }
 
 footer
