--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body
 {
+	max-width: 920px;
 	margin-top: 2%;
 	margin-left: 20%;
 	margin-right: 20%;
@@ -7,6 +8,7 @@ body
 
 #wrapper
 {
+	
 	position: relative;
 	width: 100%;
 	margin-left: auto;
