Changes to the header for mobile
Changes to the header for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,3 @@
-body
-{
-	max-width: 1080px;
-	margin-top: 2%;
-	margin-left: 20%;
-	margin-right: 20%;
-}
-
 #wrapper
 {
 	
@@ -17,7 +9,14 @@ body
 	overflow: hidden;
 }
 
-#header_main
+#header_wrapper
+{
+	margin-top: 2%;
+	margin-left: 5%;
+	margin-right: 5%;
+}
+
+#header_title
 {
 	text-align: center;
 	font-size: 4.5em;
@@ -26,13 +25,13 @@ body
 
 #header_welcome_message
 {
-	text-align: left;
+	padding-left: 15%;
 	font-size: 1em;
 	color: gray;
 	font-family: Helvetica;
 }
 
-#subheading
+#header_subheading
 {
 	text-align: center;
 	font-size: 1em;
