--- a/css/main.css
+++ b/css/main.css
@@ -2,9 +2,9 @@
 
 #site_wrapper
 {
-  margin-left:auto;
-  margin-right:auto;
-  width:960px;
+  	margin-left:auto;
+  	margin-right:auto;
+  	width:960px;
 }
 
 #header_wrapper
@@ -19,17 +19,17 @@
 	text-align: center;
 	font-size: 4.5em;
 	font-family: Helvetica;
-  color: #33333C;
+  	color: #33333C;
 }
 
 #header_welcome_message
 {
-  text-align: left;
-  padding-left: 50px;
-  font-size: 1em;
+  	text-align: left;
+  	padding-left: 50px;
+  	font-size: 1em;
 	color: gray;
 	font-family: 'Satisfy', cursive;
-  font-size: 20px;
+  	font-size: 20px;
 }
 
 #header_subheading
@@ -38,5 +38,22 @@
 	font-size: 1em;
 	color: gray;
 	font-family: 'Satisfy', cursive;
-  font-size: 20px;
+  	font-size: 20px;
 }
+
+#main_content
+{
+	width: 960px;
+}
+
+#body_text
+{
+	font-family: Helvetica;
+	font-size: 1em;
+	color: gray;
+}
+
+
+
+
+
